refactor: remove transactional annotation